# Velodium

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  install.sh  run.sh
src/: CMakeLists.txt  common.h  main.cpp
src/Engine/: Argument.cpp  Argument.h  CMakeLists.txt  Engine.cpp  Engine.h  Engine_node.cpp  Engine_node.h  Glyphs.cpp  Glyphs.h  Node_engine.cpp  Node_engine.h  Scene.cpp  Scene.h
src/Engine/Camera/: Camera.cpp  Camera.h  Followup.cpp  Followup.h  OctreeView.cpp  OctreeView.h  Viewport.cpp  Viewport.h  struct_viewport.cpp  struct_viewport.h
src/Engine/Configuration/: Configuration.cpp  Configuration.h  Configuration_node.h  Dimension.cpp  Dimension.h  config_module.cpp  config_module.h  config_opengl.cpp  config_opengl.h
src/Engine/Core/: Argument.cpp  Argument.h  Configuration.cpp  Dimension.cpp  Dimension.h  Engine.cpp  Engine.h
src/Engine/Data/: Database.h  struct_cloud.h  struct_data.h  struct_dataFile.h  struct_data_cap.h  struct_data_file.h  struct_data_icp.h  struct_data_pred.h  struct_data_udp.h  struct_detection.h  struct_frame.h  struct_generic.h  struct_glyph.h  struct_misc.h  struct_obstacle.h  struct_subset.h  struct_voxelMap.h
src/Engine/GPU/: GPU_data.cpp  GPU_data.h  GPU_fbo.cpp  GPU_fbo.h  GPU_pyramid.cpp  GPU_pyramid.h  GPU_render.cpp  GPU_render.h  GPU_rendering.cpp  GPU_rendering.h  GPU_screenshot.cpp  GPU_screenshot.h
src/Engine/Object/: AABB.cpp  AABB.h  Axis.cpp  Axis.h  Grid.h  Mark.cpp  Mark.h  Matching.cpp  Matching.h  Normal.h  OOBB.cpp  OOBB.h
src/Engine/OpenGL/: Camera.cpp  Camera.h  CoreGLengine.cpp  CoreGLengine.h  Dimension.cpp  Dimension.h  Drawer.cpp  Drawer.h  Framebuffer.cpp  Framebuffer.h  GPU_transfert.cpp  GPU_transfert.h  Light.cpp  Light.h  Octree.cpp  Octree.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Textures.cpp  Textures.h  Viewport.cpp  Viewport.h  struct_viewport.h
src/Engine/Rendering/: GPU_pullpush.cpp  GPU_pullpush.h  GPU_pyramid.cpp  GPU_pyramid.h  GPU_rendering.cpp  GPU_rendering.h  Renderer.cpp  Renderer.h  render_pass_1.cpp  render_pass_1.h  render_pass_2.cpp  render_pass_2.h  render_pullpush.cpp  render_pullpush.h  render_pyramid.cpp  render_pyramid.h
src/Engine/Scene/: Configuration.cpp  Configuration.h  Glyphs.cpp  Glyphs.h  Object.cpp  Object.h  Scene.cpp  Scene.h
src/Engine/Shader/: EDL.h  PP_edl.cpp  PP_edl.h  Shader.cpp  Shader.h  ShaderObject.cpp  ShaderObject.h  framebuffer.vs  shader_EDL.fs  shader_EDL.vs  shader_edl.fs  shader_edl.vs  shader_fbo.fs  shader_fbo.vs  shader_mvp.fs  shader_mvp.vs  shader_quad.fs  shader_quad.vs  test.fs
src/Engine/Shaderbis/: EDL.h  Shader.cpp  Shader.h  test.vs
src/GUI/: CMakeLists.txt  GUI.cpp  GUI.h  GUI_node.cpp  GUI_node.h  Node_gui.cpp  Node_gui.h
src/GUI/Box/: WIN_attribut.cpp  WIN_cloud.cpp  WIN_operation.cpp
src/GUI/Control/: GUI.cpp  GUI.h  GUI_Color.cpp  GUI_Control.cpp  GUI_Control.h  GUI_FileManager.cpp  GUI_FileManager.h  GUI_Initialization.cpp  GUI_Initialization.h  GUI_Option.cpp  GUI_Option.h  GUI_Selection.cpp  GUI_Selection.h
src/GUI/Dynamic/: GUI_Online.cpp  GUI_Online.h  GUI_Player.cpp  GUI_Player.h
src/GUI/Interface/: GUI_Capture.cpp  GUI_Capture.h  GUI_Consol.cpp  GUI_Consol.h  GUI_LeftPanel.cpp  GUI_LeftPanel.h  GUI_MenuBar.cpp  GUI_MenuBar.h  GUI_Network.cpp  GUI_Network.h  GUI_Recorder.cpp  GUI_Recorder.h  GUI_Scala.cpp  GUI_Scala.h  GUI_Velodyne.cpp  GUI_Velodyne.h  GUI_windows.cpp  GUI_windows.h  struct_consol.h
src/GUI/Modal/: GUI_Modal.cpp  GUI_Modal.h  MOD_attribut.cpp  MOD_attribut.h  MOD_camera.cpp  MOD_camera.h  MOD_cloud.cpp  MOD_cloud.h  MOD_loading.cpp  MOD_loading.h  MOD_operation.cpp  MOD_operation.h  MOD_shader.cpp  MOD_shader.h  Modal_tab.h
src/GUI/Node/: GUI_Control.cpp  GUI_Control.h  GUI_FileManager.cpp  GUI_FileManager.h  GUI_Option.cpp  GUI_Option.h
src/GUI/Window/: GUI_Consol.cpp  GUI_LeftPanel.cpp  GUI_LeftPanel.h  GUI_MenuBar.cpp  GUI_MenuBar.h
src/GUI/Windows/: GUI_windows.cpp  GUI_windows.h  WIN_attribut.cpp  WIN_attribut.h  WIN_camera.cpp  WIN_camera.h  WIN_cloud.cpp  WIN_cloud.h  WIN_cloudInfo.cpp  WIN_cloudInfo.h  WIN_filter.cpp  WIN_filter.h  WIN_heatmap.cpp  WIN_heatmap.h  WIN_loading.cpp  WIN_loading.h  WIN_modifyFileInfo.cpp  WIN_modifyFileInfo.h  WIN_opengl.cpp  WIN_opengl.h  WIN_operation.cpp  WIN_operation.h  WIN_shader.cpp  WIN_shader.h  Window_tab.h  Window_table.h
src/Interface/: Node_interface.cpp  Node_interface.h
src/Interface/Capture/: Capture.cpp  Capture.h
src/Interface/File/: Directory.cpp  Directory.h  Info.cpp  Info.h  Path.cpp  Path.h  Watcher.h  Zenity.cpp  Zenity.h
src/Interface/IO/: PCAP.cpp  PCAP.h  Recorder.cpp  Recorder.h
src/Load/: CMakeLists.txt  Load_node.cpp  Load_node.h  Loader.cpp  Loader.h  Loader_configurator.cpp  Loader_configurator.h  Node_load.cpp  Node_load.h  Operation.cpp  Operation.h  Pather.cpp  Pather.h  Saver.cpp  Saver.h  dataExtraction.cpp  dataExtraction.h
src/Load/CSV/: CSV_parser.h
src/Load/Format/: file_CBOR.cpp  file_CBOR.h  file_CSV.cpp  file_CSV.h  file_JSON.cpp  file_JSON.h  file_LAS.cpp  file_LAS.h  file_OBJ.cpp  file_OBJ.h  file_PCAP.cpp  file_PCAP.h  file_PLY.cpp  file_PLY.h  file_PTS.cpp  file_PTS.h  file_PTX.cpp  file_PTX.h  file_XYZ.cpp  file_XYZ.h
src/Load/Processing/: Extractor.cpp  Extractor.h  Extractore.cpp  Extractore.h  Loader.cpp  Loader.h  Pather.cpp  Pather.h  Saver.cpp  Saver.h  Zenity.cpp  (+4 more)
src/Module/: CMakeLists.txt  GUI_Module.h  Module.cpp  Module.h  Module_GUI.cpp  Module_GUI.h  Module_node.cpp  Module_node.h  Node_module.cpp  Node_module.h  install.sh
src/Operation/: CMakeLists.txt  Node_operation.cpp  Node_operation.h  Operation.cpp  Operation.h  Operation_GUI.h  Operation_node.cpp  Operation_node.h  Plotting.cpp  Plotting.h
src/Scene/: Node_scene.cpp  Node_scene.h
src/Specific/: CMakeLists.txt  Node.cpp  Node.h  color.h  fct_display.h  fct_error.cpp  fct_error.h  fct_math.cpp  fct_math.h  fct_maths.h  fct_opengl.h  fct_system.h  fct_terminal.h  fct_transtypage.h  fct_watcher.h  fct_zenity.h  note.h  struct_consol.h
src/Test/: catch.hpp
(+1934 files in other folders)
